--- a/accounts/templates/register.html
+++ b/accounts/templates/register.html
@@ -1,25 +1,92 @@
 {% extends "base.html" %} {% block content %}
-<form method="post">
-  {% csrf_token %}
 
-  <div class="form-group">
-    {{ user_form.username.errors }}
-    <label>Usuário: </label>
-    {{ user_form.username }}
-  </div>
-  <div class="form-group">
-    {{ user_form.password1.errors }}
-    <label>Senha: </label>
-    {{ user_form.password1 }}
-  </div>
-  <div class="form-group">
-    {{ user_form.password2.errors }}
-    <label>Confirmação de senha: </label>
-    {{ user_form.password2 }}
-  </div>
+<style>
+  .form-container {
+    margin: 0 auto;
+    width: 320px;
+    border-radius: 0.75rem;
+    background-color: #10375c;
+    padding: 2rem;
+    color: rgba(243, 244, 246, 1);
+  }
 
-  <div class="form-group">
-    <input type="submit" value="Cadastrar" />
-  </div>
-</form>
+  .title {
+    text-align: center;
+    font-size: 1.5rem;
+    line-height: 2rem;
+    font-weight: 700;
+  }
+
+  .form {
+    margin-top: 1.5rem;
+  }
+
+  .input-group {
+    margin-top: 0.25rem;
+    font-size: 0.875rem;
+    line-height: 1.25rem;
+  }
+
+  .input-group label {
+    display: block;
+    color: rgba(156, 163, 175, 1);
+    margin-bottom: 4px;
+  }
+
+  .input-group input {
+    width: 90%;
+    border-radius: 0.375rem;
+    border: 1px solid rgb(159, 167, 179);
+    outline: 0;
+    background-color: #10375c;
+    padding: 0.75rem 1rem;
+    color: rgba(243, 244, 246, 1);
+  }
+
+  .input-group input:focus {
+    border-color: rgba(167, 139, 250);
+  }
+
+  .sign {
+    margin-top: 32px;
+    display: block;
+    width: 100%;
+    background-color: rgba(167, 139, 250, 1);
+    padding: 0.75rem;
+    text-align: center;
+    color: rgba(17, 24, 39, 1);
+    border: none;
+    border-radius: 0.375rem;
+    font-weight: 600;
+  }
+</style>
+
+<div class="form-container">
+  <p class="title">Registro</p>
+  <form method="post" class="form">
+    {% csrf_token %}
+    
+    <div class="input-group">
+      <label for="username">Nome de usuário</label>
+      {{ user_form.username }}
+      <div class="error">{{ user_form.username.errors }}</div>
+    </div>
+
+    <div class="input-group">
+      <label for="password1">Senha</label>
+      {{ user_form.password1 }}
+      <div class="error">{{ user_form.password1.errors }}</div>
+    </div>
+
+    <div class="input-group">
+      <label for="password2">Confirmação de senha</label>
+      {{ user_form.password2 }}
+      <div class="error">{{ user_form.password2.errors }}</div>
+    </div>
+
+    <button type="submit" class="sign">Cadastrar</button>
+  </form>
+</div>
 {% endblock %}
+
+
