--- a/cars/templates/car_detail.html
+++ b/cars/templates/car_detail.html
@@ -7,9 +7,9 @@
     overflow: hidden;
     text-align: center;
     transition: all 0.3s ease;
-    max-width: 500px;
+    max-width: 600px;    
     margin: 20px auto 0;
-    margin-bottom: 20px;
+    margin-bottom: 20px;    
   }
 
   .car-card:hover {
@@ -26,12 +26,19 @@
 
   .car-card h2 {
     font-size: 1.5rem;
-    margin: 10px;
+    margin: 10px 0 42px 0;
   }
 
   .car-card p {
     font-size: 1rem;
     margin-bottom: 10px;
+    text-align: left;
+    padding: 0 12px 12px 12px;
+  }
+
+  .car-card img {
+    width: 100%; 
+    height: 400px;   
   }
 
   .buttons-container {
@@ -77,14 +84,15 @@
     text-decoration: none !important;
   }
 </style>
+
 <div class="car-card">
   {% if object.photo %}
-    <img
-      src="/media/{{ object.photo }}"
-      alt="{{ object.model }} - {{ object.brand }}"
-    />
+  <img
+    src="/media/{{ object.photo }}"
+    alt="{{ object.model }} - {{ object.brand }}"
+  />
   {% else %}
-    <p class="no-photo">Foto não disponivel</p>
+  <p class="no-photo">Foto não disponivel</p>
   {% endif %}
   <h2>{{ object.brand }} {{ object.model }}</h2>
   <p><strong>Ano de fabricação:</strong> {{ object.factory_year }}</p>
