--- a/cars/templates/cars.html
+++ b/cars/templates/cars.html
@@ -16,9 +16,13 @@
     background-color: #e3e1e1;
     box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
     border-radius: 10px;
-    overflow: hidden;
+    overflow:auto;
     text-align: center;
     transition: all 0.3s ease;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    min-height: 340px;
   }
 
   .car-card:hover {
@@ -31,12 +35,6 @@
     width: 100%;
     height: 200px;
     object-fit: cover;
-  }
-
-  .car-card h3 {
-    font-size: 20px;
-    margin-top: 10px;
-    margin-bottom: 5px;
   }
 
   .car-card h2 {
@@ -53,7 +51,7 @@
     .car-grid {
       grid-template-columns: repeat(2, 1fr);
     }
-  }
+  }  
 
   form {
     display: flex;
@@ -114,15 +112,16 @@
   <a href="{% url 'car_detail' car.pk %}">
     <div class="car-card">
       {% if car.photo %}
-        <img
-          src="/media/{{ car.photo }}"
-          alt="{{ car.model }} - {{ car.brand }}"
-        />
+      <img
+        class="image-container"
+        src="/media/{{ car.photo }}"
+        alt="{{ car.model }} - {{ car.brand }}"
+      />
       {% else %}
-        <p class="no-photo">Foto não disponivel</p>
+      <p class="no-photo">Foto não disponivel</p>
       {% endif %}
       <h2>{{ car.brand }} {{ car.model }}</h2>
-      <p>{{ car.factory_year }} - R$ {{ car.value }}</p>
+      <p><strong>{{ car.factory_year }} - R$ {{ car.value }}</strong></p>
     </div>
   </a>
   {% endfor %} {% else %}
